# benchmark

./: .gitignore  README.md  bench_build.sh  bench_run.sh  devenv.nix  env.sh
source/: CMakeLists.txt
source/create_sequence/: CMakeLists.txt  README.md  create_sequence.c  script_create_sequence.sh
source/microbe_cache/: CMakeLists.txt  README.md  create_sequence.c  memory.h  microbe.c  microbe_cache.c.m4  microbe_cache_threaded.c.m4  script_create_configuration_generic.sh  script_create_configuration_hikey960.sh  script_create_configuration_hikey970.sh  script_create_configuration_odroidxu3.sh  script_create_sequence.sh  script_execute_generic.sh  script_execute_hikey960.sh  script_execute_hikey970.sh  script_execute_odroidxu3.sh  script_odroid_xu3.sh
source/scripts/: arch_specific_odroidxu3.py  bench_run.py  class_definitions.py  config.py  config_binary_microbe_cache.py  test_dvfs_mem.sh  test_ondemandas.py  utils.py
